Fix Overflow

--- a/main.css
+++ b/main.css
@@ -513,6 +513,7 @@
 
   /* mapvisual */
   .map.hidden {
+    display: none;
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.5s ease;
